# NYLBproject

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/commands/: trend-scan.md
config/: lenses.yaml
docs/superpowers/plans/: 2026-06-03-nylb-phase1.md  2026-06-04-competitor-price-crawler.md  2026-06-04-nylb-price-positioning.md  2026-06-04-nylb-saas-slice1-supabase.md  2026-06-04-nylb-signal-quality.md  2026-06-04-nylb-trend-radar.md  2026-06-06-nylb-beverage-lens-tabs.md  2026-06-06-nylb-decision-support-board.md  2026-06-06-nylb-fnb-keyword-universe.md  2026-06-06-nylb-product-brand-split.md
src/nylb/: __main__.py  cli.py  config.py
src/nylb/collectors/: base.py  cache.py  (+7 more)
tests/: test_beverage_config.py  test_board.py  test_board_season.py  test_board_split.py  test_board_universe.py  test_cli.py  test_cli_board.py  test_cli_dashboard_lenses.py  test_config.py  test_context.py  test_datalab_anchor.py  test_decision_intelligence.py  test_discover.py  test_industry_agnostic.py  test_multi_dashboard.py  test_naver_news.py  test_naver_perkw.py  test_report_multi.py  test_scan_radar.py  test_schema_lens.py  test_server.py  test_smoke.py  test_split_config.py  test_validate.py  test_verify.py
tests/collectors/: test_base.py  test_cache.py  test_google_trends.py  test_instagram.py  test_kurly.py  test_naver.py  test_naver_datalab.py  test_youtube.py
tests/core/: test_analyzer.py  test_opportunity.py  test_scan.py  test_schema.py  test_season.py  test_signal.py  test_store.py
tests/report/: test_chart_data.py  test_html.py  test_pdf.py  test_writer.py
(+32 files in other folders)
