[project]
name = "nylb"
version = "0.1.0"
description = "NYLB market-research tool"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "pytrends>=4.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
nylb = "nylb.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = ["live: hits real external APIs (needs keys)"]
